// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Feed renders correctly  1`] = `
<div>
  <h3>
    Feed
  </h3>
  <div
    className="feed-record"
    key="0"
  >
    <div
      className="feed-container"
    >
      <div>
        <div>
          2018-06-26
        </div>
        <p>
          There is some action
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Feed renders correctly if no data 1`] = `
<div>
  <h3>
    Feed
  </h3>
  <div>
    Nothing to show
  </div>
</div>
`;
